doc: Fix mobile navbar collapse & sticky (#1027)

--- a/packages/docs/src/app/globals.css
+++ b/packages/docs/src/app/globals.css
@@ -121,6 +121,13 @@
       padding-block: 1rem;
     }
   }
+
+  /* Fix the mobile top navbar collapsing */
+  #nd-subnav {
+    flex-shrink: 0;
+    /* https://github.com/47ng/nuqs/pull/1027#issuecomment-3007455946 */
+    @apply fixed z-30 w-full;
+  }
 }
 
 @layer components {
